force-app/main/default/objects/ChangeRequest__c/ChangeRequest__c.object-meta.xml
<CustomObject>
    <description>Objeto customizado para armazenar as solicitações de Devs para implantações (deploys) de mudanças.</description>
    <label>Solicitação de Mudança</label>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitações de Mudanças</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>