force-app/main/default/objects/ChangeRequest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Área de texto para descrever a mudança solicitada.</description>
    <inlineHelpText>Preencha com:
- User Story associada a essa mudança
- Mudança realizada
- Motivo para a mudança</inlineHelpText>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>