force-app/main/default/objects/ChangeRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Opções de status para as solicitações de mudanças, varia de acordo com cada etapa da solicitação.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Ready</fullName>
                <label>Pronto para aprovação</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
                <label>Implantado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>